<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_MASTER" Id="{97dade9a-3f85-49a7-b23d-ce7fe1ab290f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	(*-----------------------------------------------------------------------------------------------------------------*)
	// System Pulses 
	bFlash1Hz						: BOOL;
	bFlash2Hz						: BOOL;
	bFlash4Hz				   		: BOOL;
	bFlash10Hz						: BOOL;
	bFlash10BHz        		  		: BOOL;
	bFlash100Hz      	      		: BOOL;
	bFlashScale       	      		: BOOL;
	bFlashScale4       		  		: BOOL;
	bFlashScale5        	  		: BOOL;
	bFlashingFreq2			  		: BOOL;
	bFlashScaleFast       	  		: BOOL;
	
//Master Control
	stMachineStatus					: ST_MachineStatusStruct;	
	stMasterControl					: ST_MasterControlStruct;
  	stStationSruct                  : ARRAY[0..1] OF ST_StandardStationStruct; (* Station 0 - Master
                                                                                  Station 1 - Leak test                                                           
                                                                                   *)

	
																				   
	stNest							: ST_Nest;                                                                        
	stAlarms                        : ARRAY [0..1] OF ST_Events;
	
	bManualModeTrigger				: BOOL;
	bFirstScan				:   BOOL;
	tFirstScan				:   TON;



	
																				   

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>